updated the html files for the tests

--- a/fitbenchmarking/results_processing/tests/expected_results/compare.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/compare.html
@@ -38,15 +38,15 @@
   <tbody>
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
-      <td id="T_table_row0_col0" class="data row0 col0" ><a href="../link3">2 (2)<br>4.2e-05 (1)<sup>2</sup></a></td>
-      <td id="T_table_row0_col1" class="data row0 col1" ><a href="../link1">1 (1)<br>0.01 (238.1)<sup>1</sup></a></td>
-      <td id="T_table_row0_col2" class="data row0 col2" ><a href="../link2">5 (5)<br>0.0022 (52.38)</a></td>
+      <td id="T_table_row0_col0" class="data row0 col0" ><a class="dark" href="../link3">2 (2)</a><a class="dark" href="../link3">4.2e-05 (1)<sup>2</sup></a></td>
+      <td id="T_table_row0_col1" class="data row0 col1" ><a class="dark" href="../link1">1 (1)</a><a class="light" href="../link1">0.01 (238.1)<sup>1</sup></a></td>
+      <td id="T_table_row0_col2" class="data row0 col2" ><a class="dark" href="../link2">5 (5)</a><a class="light" href="../link2">0.0022 (52.38)</a></td>
     </tr>
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
-      <td id="T_table_row1_col0" class="data row1 col0" ><a href="../link7">5 (1.667)<br>1e-07 (2e+06)<sup>3</sup></a></td>
-      <td id="T_table_row1_col1" class="data row1 col1" ><a href="../link5">7 (2.333)<br>3e-10 (6000)</a></td>
-      <td id="T_table_row1_col2" class="data row1 col2" ><a href="../link6">3 (1)<br>5e-14 (1)<sup>1</sup></a></td>
+      <td id="T_table_row1_col0" class="data row1 col0" ><a class="dark" href="../link7">5 (1.667)</a><a class="light" href="../link7">1e-07 (2e+06)<sup>3</sup></a></td>
+      <td id="T_table_row1_col1" class="data row1 col1" ><a class="dark" href="../link5">7 (2.333)</a><a class="light" href="../link5">3e-10 (6000)</a></td>
+      <td id="T_table_row1_col2" class="data row1 col2" ><a class="dark" href="../link6">3 (1)</a><a class="dark" href="../link6">5e-14 (1)<sup>1</sup></a></td>
     </tr>
   </tbody>
 </table>
