--- a/fitbenchmarking/results_processing/tests/expected_results/local_min.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/local_min.html
@@ -23,15 +23,15 @@
   <tbody>
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
-      <td id="T_table_row0_col0" class="data row0 col0" ><a href="../link3">False (2.941)<sup>2</sup></a></td>
-      <td id="T_table_row0_col1" class="data row0 col1" ><a href="../link1">False (0.5174)<sup>1</sup></a></td>
-      <td id="T_table_row0_col2" class="data row0 col2" ><a href="../link2">False (1.48)</a></td>
+      <td id="T_table_row0_col0" class="data row0 col0" ><a class="light" href="../link3">False (2.941)<sup>2</sup></a></td>
+      <td id="T_table_row0_col1" class="data row0 col1" ><a class="light" href="../link1">False (0.5174)<sup>1</sup></a></td>
+      <td id="T_table_row0_col2" class="data row0 col2" ><a class="light" href="../link2">False (1.48)</a></td>
     </tr>
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
-      <td id="T_table_row1_col0" class="data row1 col0" ><a href="../link7">False (15.01)<sup>3</sup></a></td>
-      <td id="T_table_row1_col1" class="data row1 col1" ><a href="../link5">False (6.708)</a></td>
-      <td id="T_table_row1_col2" class="data row1 col2" ><a href="../link6">False (4.5)<sup>1</sup></a></td>
+      <td id="T_table_row1_col0" class="data row1 col0" ><a class="light" href="../link7">False (15.01)<sup>3</sup></a></td>
+      <td id="T_table_row1_col1" class="data row1 col1" ><a class="light" href="../link5">False (6.708)</a></td>
+      <td id="T_table_row1_col2" class="data row1 col2" ><a class="light" href="../link6">False (4.5)<sup>1</sup></a></td>
     </tr>
   </tbody>
 </table>
