--- a/fitbenchmarking/results_processing/tests/expected_results/acc.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/acc.html
@@ -35,15 +35,15 @@
   <tbody>
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
-      <td id="T_table_row0_col0" class="data row0 col0" ><a href="../link3">2 (2)<sup>2</sup></a></td>
-      <td id="T_table_row0_col1" class="data row0 col1" ><a href="../link1">1 (1)<sup>1</sup></a></td>
-      <td id="T_table_row0_col2" class="data row0 col2" ><a href="../link2">5 (5)</a></td>
+      <td id="T_table_row0_col0" class="data row0 col0" ><a class="dark" href="../link3">2 (2)<sup>2</sup></a></td>
+      <td id="T_table_row0_col1" class="data row0 col1" ><a class="dark" href="../link1">1 (1)<sup>1</sup></a></td>
+      <td id="T_table_row0_col2" class="data row0 col2" ><a class="dark" href="../link2">5 (5)</a></td>
     </tr>
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
-      <td id="T_table_row1_col0" class="data row1 col0" ><a href="../link7">5 (1.667)<sup>3</sup></a></td>
-      <td id="T_table_row1_col1" class="data row1 col1" ><a href="../link5">7 (2.333)</a></td>
-      <td id="T_table_row1_col2" class="data row1 col2" ><a href="../link6">3 (1)<sup>1</sup></a></td>
+      <td id="T_table_row1_col0" class="data row1 col0" ><a class="dark" href="../link7">5 (1.667)<sup>3</sup></a></td>
+      <td id="T_table_row1_col1" class="data row1 col1" ><a class="dark" href="../link5">7 (2.333)</a></td>
+      <td id="T_table_row1_col2" class="data row1 col2" ><a class="dark" href="../link6">3 (1)<sup>1</sup></a></td>
     </tr>
   </tbody>
 </table>
