--- a/fitbenchmarking/results_processing/tests/expected_results/local_min.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/local_min.html
@@ -29,25 +29,25 @@
   <tbody>
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
-      <td id="T_table_row0_col0" class="data row0 col0" ><a href="../link3">True (0)<sup>4</sup></a></td>
-      <td id="T_table_row0_col1" class="data row0 col1" ><a href="../link3">True (0)<sup>4</sup></a></td>
-      <td id="T_table_row0_col2" class="data row0 col2" ><a href="../link2">True (0)</a></td>
-      <td id="T_table_row0_col3" class="data row0 col3" ><a href="../link6">True (0)</a></td>
-      <td id="T_table_row0_col4" class="data row0 col4" ><a href="../link0">True (0)</a></td>
-      <td id="T_table_row0_col5" class="data row0 col5" ><a href="../link4">True (0)</a></td>
-      <td id="T_table_row0_col6" class="data row0 col6" ><a href="../link1">True (0)</a></td>
-      <td id="T_table_row0_col7" class="data row0 col7" ><a href="../link5">True (0)</a></td>
+      <td id="T_table_row0_col0" class="data row0 col0" ><a class="dark" href="../link3">True (0)<sup>4</sup></a></td>
+      <td id="T_table_row0_col1" class="data row0 col1" ><a class="dark" href="../link3">True (0)<sup>4</sup></a></td>
+      <td id="T_table_row0_col2" class="data row0 col2" ><a class="dark" href="../link2">True (0)</a></td>
+      <td id="T_table_row0_col3" class="data row0 col3" ><a class="dark" href="../link6">True (0)</a></td>
+      <td id="T_table_row0_col4" class="data row0 col4" ><a class="dark" href="../link0">True (0)</a></td>
+      <td id="T_table_row0_col5" class="data row0 col5" ><a class="dark" href="../link4">True (0)</a></td>
+      <td id="T_table_row0_col6" class="data row0 col6" ><a class="dark" href="../link1">True (0)</a></td>
+      <td id="T_table_row0_col7" class="data row0 col7" ><a class="dark" href="../link5">True (0)</a></td>
     </tr>
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
-      <td id="T_table_row1_col0" class="data row1 col0" ><a href="../link10">True (0)</a></td>
-      <td id="T_table_row1_col1" class="data row1 col1" ><a href="../link14">True (0)</a></td>
-      <td id="T_table_row1_col2" class="data row1 col2" ><a href="../link9">True (0)</a></td>
-      <td id="T_table_row1_col3" class="data row1 col3" ><a href="../link13">True (0)</a></td>
-      <td id="T_table_row1_col4" class="data row1 col4" ><a href="../link7">True (0)</a></td>
-      <td id="T_table_row1_col5" class="data row1 col5" ><a href="../link11">True (0)</a></td>
-      <td id="T_table_row1_col6" class="data row1 col6" ><a href="../link8">True (0)</a></td>
-      <td id="T_table_row1_col7" class="data row1 col7" ><a href="../link12">True (0)</a></td>
+      <td id="T_table_row1_col0" class="data row1 col0" ><a class="dark" href="../link10">True (0)</a></td>
+      <td id="T_table_row1_col1" class="data row1 col1" ><a class="dark" href="../link14">True (0)</a></td>
+      <td id="T_table_row1_col2" class="data row1 col2" ><a class="dark" href="../link9">True (0)</a></td>
+      <td id="T_table_row1_col3" class="data row1 col3" ><a class="dark" href="../link13">True (0)</a></td>
+      <td id="T_table_row1_col4" class="data row1 col4" ><a class="dark" href="../link7">True (0)</a></td>
+      <td id="T_table_row1_col5" class="data row1 col5" ><a class="dark" href="../link11">True (0)</a></td>
+      <td id="T_table_row1_col6" class="data row1 col6" ><a class="dark" href="../link8">True (0)</a></td>
+      <td id="T_table_row1_col7" class="data row1 col7" ><a class="dark" href="../link12">True (0)</a></td>
     </tr>
   </tbody>
 </table>
