added multiple metrics for quantifying runtime performance

--- a/fitbenchmarking/results_processing/tests/expected_results/compare.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/compare.html
@@ -26,8 +26,11 @@
 #T_table_row1_col4, #T_table_row1_col6 {
   background-image: linear-gradient(#db476a,#db476a,#fe9f6d,#fe9f6d);
 }
-#T_table_row1_col5, #T_table_row1_col7 {
+#T_table_row1_col5 {
   background-image: linear-gradient(#a02f7f,#a02f7f,#ef5d5e,#ef5d5e);
+}
+#T_table_row1_col7 {
+  background-image: linear-gradient(#a02f7f,#a02f7f,#f8745c,#f8745c);
 }
 </style>
 <table id="T_table">
@@ -79,7 +82,7 @@
       <td id="T_table_row1_col4" class="data row1 col4" ><a class="dark" href="../link7">1 (5)</a><a class="dark" href="../link7">1 (1)</a></td>
       <td id="T_table_row1_col5" class="data row1 col5" ><a class="light" href="../link11">3 (15)</a><a class="dark" href="../link11">3 (3)</a></td>
       <td id="T_table_row1_col6" class="data row1 col6" ><a class="dark" href="../link8">1 (5)</a><a class="dark" href="../link8">1 (1)</a></td>
-      <td id="T_table_row1_col7" class="data row1 col7" ><a class="light" href="../link12">3 (15)</a><a class="dark" href="../link12">3 (3)</a></td>
+      <td id="T_table_row1_col7" class="data row1 col7" ><a class="light" href="../link12">3 (15)</a><a class="dark" href="../link12">2 (2)</a></td>
     </tr>
   </tbody>
 </table>
