--- a/fitbenchmarking/results_processing/tests/expected_results/runtime.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/runtime.html
@@ -30,15 +30,18 @@
 <table id="T_table">
   <thead>
     <tr>
+      <th class="blank" >&nbsp;</th>
       <th class="blank level0" >&nbsp;</th>
       <th id="T_table_level0_col0" class="col_heading level0 col0" colspan="8"><a class="cost_function_header" href=https://fitbenchmarking.readthedocs.io/en/latest/users/options/fitting_option.html#cost-function-cost-func-type target="_blank">cf1</a></th>
     </tr>
     <tr>
+      <th class="blank" >&nbsp;</th>
       <th class="blank level1" >&nbsp;</th>
       <th id="T_table_level1_col0" class="col_heading level1 col0" colspan="4"><a class="software_header" href="https://fitbenchmarking.readthedocs.io/en/latest/users/options/minimizer_option.html#s0" target="_blank">s0</a></th>
       <th id="T_table_level1_col4" class="col_heading level1 col4" colspan="4"><a class="software_header" href="https://fitbenchmarking.readthedocs.io/en/latest/users/options/minimizer_option.html#s1" target="_blank">s1</a></th>
     </tr>
     <tr>
+      <th class="blank" >&nbsp;</th>
       <th class="blank level2" >&nbsp;</th>
       <th id="T_table_level2_col0" class="col_heading level2 col0" ><a class="minimizer_header" col=0 title="[]"href="https://fitbenchmarking.readthedocs.io/en/latest/users/options/minimizer_option.html#s0" target="_blank">m00: j:j0</a></th>
       <th id="T_table_level2_col1" class="col_heading level2 col1" ><a class="minimizer_header" col=1 title="[]"href="https://fitbenchmarking.readthedocs.io/en/latest/users/options/minimizer_option.html#s0" target="_blank">m00: j:j1</a></th>
@@ -53,6 +56,7 @@
   <tbody>
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
+      <th id="T_table_level1_row0" class="row_heading level1 row0" ><a class="problem_header_lev1" href="../link0">2 params, 3 points</a></th>
       <td id="T_table_row0_col0" class="data row0 col0" ><a class="light" href="../link3">inf (inf)<sup>4</sup></a></td>
       <td id="T_table_row0_col1" class="data row0 col1" ><a class="light" href="../link3">inf (inf)<sup>4</sup></a></td>
       <td id="T_table_row0_col2" class="data row0 col2" ><a class="light" href="../link2">13 (13)</a></td>
@@ -64,6 +68,7 @@
     </tr>
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
+      <th id="T_table_level1_row1" class="row_heading level1 row1" ><a class="problem_header_lev1" href="../link0">2 params, 3 points</a></th>
       <td id="T_table_row1_col0" class="data row1 col0" ><a class="light" href="../link10">inf (inf)</a></td>
       <td id="T_table_row1_col1" class="data row1 col1" ><a class="light" href="../link14">inf (inf)</a></td>
       <td id="T_table_row1_col2" class="data row1 col2" ><a class="dark" href="../link9">2 (2)</a></td>
