suggestions from code review
Co-authored-by: Andrew Lister <48282025+AndrewLister-STFC@users.noreply.github.com>

--- a/fitbenchmarking/results_processing/tests/expected_results/acc.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/acc.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 #T_table_row0_col0, #T_table_row0_col1, #T_table_row1_col0, #T_table_row1_col1 {
-  background-color: #e5e4e2;
+  background-color: #f5f5f5;
 }
 #T_table_row0_col2 {
   background-color: #f8745c;
