--- a/fitbenchmarking/results_processing/tests/expected_results/compare.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/compare.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 #T_table_row0_col0, #T_table_row0_col1, #T_table_row1_col0, #T_table_row1_col1 {
-  background-image: linear-gradient(#e5e4e2,#e5e4e2,#e5e4e2,#e5e4e2);
+  background-image: linear-gradient(#f5f5f5,#f5f5f5,#f5f5f5,#f5f5f5);
 }
 #T_table_row0_col2 {
   background-image: linear-gradient(#f8745c,#f8745c,#a8327d,#a8327d);
