--- a/fitbenchmarking/results_processing/tests/expected_results/local_min.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/local_min.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 #T_table_row0_col0, #T_table_row0_col1, #T_table_row1_col0, #T_table_row1_col1 {
-  background-color: #e5e4e2;
+  background-color: #f5f5f5;
 }
 #T_table_row0_col2, #T_table_row0_col3, #T_table_row0_col4, #T_table_row0_col5, #T_table_row0_col6, #T_table_row0_col7, #T_table_row1_col2, #T_table_row1_col3, #T_table_row1_col4, #T_table_row1_col5, #T_table_row1_col6, #T_table_row1_col7 {
   background-color: #fe9f6d;
