--- a/fitbenchmarking/results_processing/tests/expected_results/runtime.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/runtime.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 #T_table_row0_col0, #T_table_row0_col1, #T_table_row1_col0, #T_table_row1_col1 {
-  background-color: #3b0f70;
+  background-color: #f5f5f5;
 }
 #T_table_row0_col2 {
   background-color: #a8327d;
@@ -57,8 +57,8 @@
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
       <th id="T_table_level1_row0" class="row_heading level1 row0" ><a class="problem_header_lev1" href="../link0">2 params, 3 points</a></th>
-      <td id="T_table_row0_col0" class="data row0 col0" ><a class="light" href="../link3">inf (inf)<sup>4</sup></a></td>
-      <td id="T_table_row0_col1" class="data row0 col1" ><a class="light" href="../link3">inf (inf)<sup>4</sup></a></td>
+      <td id="T_table_row0_col0" class="data row0 col0" ><span class="blank">Error <sup>4</sup></span></td>
+      <td id="T_table_row0_col1" class="data row0 col1" ><span class="blank">Error <sup>4</sup></span></td>
       <td id="T_table_row0_col2" class="data row0 col2" ><a class="light" href="../link2">13 (13)</a></td>
       <td id="T_table_row0_col3" class="data row0 col3" ><a class="dark" href="../link6">1 (1)</a></td>
       <td id="T_table_row0_col4" class="data row0 col4" ><a class="light" href="../link0">15 (15)</a></td>
@@ -69,8 +69,8 @@
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
       <th id="T_table_level1_row1" class="row_heading level1 row1" ><a class="problem_header_lev1" href="../link0">2 params, 3 points</a></th>
-      <td id="T_table_row1_col0" class="data row1 col0" ><a class="light" href="../link10">inf (inf)</a></td>
-      <td id="T_table_row1_col1" class="data row1 col1" ><a class="light" href="../link14">inf (inf)</a></td>
+      <td id="T_table_row1_col0" class="data row1 col0" ><span class="blank">Error </span></td>
+      <td id="T_table_row1_col1" class="data row1 col1" ><span class="blank">Error </span></td>
       <td id="T_table_row1_col2" class="data row1 col2" ><a class="dark" href="../link9">2 (2)</a></td>
       <td id="T_table_row1_col3" class="data row1 col3" ><a class="light" href="../link13">15 (15)</a></td>
       <td id="T_table_row1_col4" class="data row1 col4" ><a class="dark" href="../link7">1 (1)</a></td>
