--- a/fitbenchmarking/results_processing/tests/expected_results/local_min.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/local_min.html
@@ -1,8 +1,5 @@
 <style type="text/css">
-#T_table_row0_col0, #T_table_row0_col1, #T_table_row1_col0, #T_table_row1_col1 {
-  background-color: #f5f5f5;
-}
-#T_table_row0_col2, #T_table_row0_col3, #T_table_row0_col4, #T_table_row0_col5, #T_table_row0_col6, #T_table_row0_col7, #T_table_row1_col2, #T_table_row1_col3, #T_table_row1_col4, #T_table_row1_col5, #T_table_row1_col6, #T_table_row1_col7 {
+#T_table_row0_col0, #T_table_row0_col1, #T_table_row0_col2, #T_table_row0_col3, #T_table_row0_col4, #T_table_row0_col5, #T_table_row0_col6, #T_table_row0_col7, #T_table_row1_col0, #T_table_row1_col1, #T_table_row1_col2, #T_table_row1_col3, #T_table_row1_col4, #T_table_row1_col5, #T_table_row1_col6, #T_table_row1_col7 {
   background-color: #fe9f6d;
 }
 </style>
@@ -36,8 +33,8 @@
     <tr>
       <th id="T_table_level0_row0" class="row_heading level0 row0" ><a class="problem_header" href="../link0">prob_0</a></th>
       <th id="T_table_level1_row0" class="row_heading level1 row0" ><a class="problem_header_lev1" href="../link0">2 params, 3 points</a></th>
-      <td id="T_table_row0_col0" class="data row0 col0" ><span class="blank">N/A</span></td>
-      <td id="T_table_row0_col1" class="data row0 col1" ><span class="blank">N/A</span></td>
+      <td id="T_table_row0_col0" class="data row0 col0" ><a class="dark" href="../link3">True (0)<sup>4</sup></a></td>
+      <td id="T_table_row0_col1" class="data row0 col1" ><a class="dark" href="../link3">True (0)<sup>4</sup></a></td>
       <td id="T_table_row0_col2" class="data row0 col2" ><a class="dark" href="../link2">True (0)</a></td>
       <td id="T_table_row0_col3" class="data row0 col3" ><a class="dark" href="../link6">True (0)</a></td>
       <td id="T_table_row0_col4" class="data row0 col4" ><a class="dark" href="../link0">True (0)</a></td>
@@ -48,8 +45,8 @@
     <tr>
       <th id="T_table_level0_row1" class="row_heading level0 row1" ><a class="problem_header" href="../link0">prob_1</a></th>
       <th id="T_table_level1_row1" class="row_heading level1 row1" ><a class="problem_header_lev1" href="../link0">2 params, 3 points</a></th>
-      <td id="T_table_row1_col0" class="data row1 col0" ><span class="blank">N/A</span></td>
-      <td id="T_table_row1_col1" class="data row1 col1" ><span class="blank">N/A</span></td>
+      <td id="T_table_row1_col0" class="data row1 col0" ><a class="dark" href="../link10">True (0)</a></td>
+      <td id="T_table_row1_col1" class="data row1 col1" ><a class="dark" href="../link14">True (0)</a></td>
       <td id="T_table_row1_col2" class="data row1 col2" ><a class="dark" href="../link9">True (0)</a></td>
       <td id="T_table_row1_col3" class="data row1 col3" ><a class="dark" href="../link13">True (0)</a></td>
       <td id="T_table_row1_col4" class="data row1 col4" ><a class="dark" href="../link7">True (0)</a></td>
