Updated the expected results of the default tests

--- a/fitbenchmarking/results_processing/tests/expected_results/minimizer_dropdown.html
+++ b/fitbenchmarking/results_processing/tests/expected_results/minimizer_dropdown.html
@@ -1,13 +1,13 @@
 <div id="minimizer_dropdown" class="dropdown-check-list" tabindex="100">
     <span class="anchor" onclick="show_dropdown('minimizer_dropdown')">Select Minimizers</span>
     <ul class="items">
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s0', 'm00: j:j0')"/> m00: j:j0</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s0', 'm00: j:j1')"/> m00: j:j1</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s0', 'm01: j:j0')"/> m01: j:j0</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s0', 'm01: j:j1')"/> m01: j:j1</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s1', 'm10: j:j0')"/> m10: j:j0</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s1', 'm10: j:j1')"/> m10: j:j1</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s1', 'm11: j:j0')"/> m11: j:j0</label></li>
-        <li><label class="noselect"><input type="checkbox" checked=true onclick="toggle_minimizer('s1', 'm11: j:j1')"/> m11: j:j1</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m00: j:j0"onclick="toggle_minimizer('s0', 'm00: j:j0')"/> m00: j:j0</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m00: j:j1"onclick="toggle_minimizer('s0', 'm00: j:j1')"/> m00: j:j1</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m01: j:j0"onclick="toggle_minimizer('s0', 'm01: j:j0')"/> m01: j:j0</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m01: j:j1"onclick="toggle_minimizer('s0', 'm01: j:j1')"/> m01: j:j1</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m10: j:j0"onclick="toggle_minimizer('s1', 'm10: j:j0')"/> m10: j:j0</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m10: j:j1"onclick="toggle_minimizer('s1', 'm10: j:j1')"/> m10: j:j1</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m11: j:j0"onclick="toggle_minimizer('s1', 'm11: j:j0')"/> m11: j:j0</label></li>
+        <li><label class="noselect"><input type="checkbox" checked=true value="m11: j:j1"onclick="toggle_minimizer('s1', 'm11: j:j1')"/> m11: j:j1</label></li>
     </ul>
 </div>
